# vision

./: .env.example  .gitignore  PROGRESS_SUMMARY.md  README.md  current_packages.txt  pyproject.toml  requirements.txt
apps/api/src/: __init__.py
apps/api/src/config/: __init__.py  settings.py
apps/api/tests/: __init__.py  conftest.py  test_providers.py
public/: index.html
scripts/: validate_phase1.py
visionforgeai/: README.md  __init__.py  exceptions.py  main.py
visionforgeai/api/routes/: llm.py
visionforgeai/api/routes/videos/: __init__.py  planner.py
visionforgeai/config/: __init__.py  settings.py
visionforgeai/providers/: __init__.py
visionforgeai/providers/llm/: __init__.py  anthropic.py  base.py  local.py  openai.py
visionforgeai/providers/llm_mock/: __init__.py  mock.py
visionforgeai/schemas/: common.py  llm.py
visionforgeai/services/: llm_service.py
visionforgeai/utils/: logging.py
visionforgeai/visionforgeai/: __init__.py  main.py
visionforgeai/visionforgeai/api/routes/: llm.py
visionforgeai/visionforgeai/config/: __init__.py  settings.py
visionforgeai/visionforgeai/providers/: __init__.py
visionforgeai/visionforgeai/providers/llm/: __init__.py  __init__.py.bak  anthropic.py  base.py  openai.py
visionforgeai/visionforgeai/providers/llm_mock/: __init__.py  mock.py
visionforgeai/visionforgeai/schemas/: llm.py
visionforgeai/visionforgeai/services/: llm_service.py
visionforgeai/visionforgeai/utils/: logging.py
